--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,8 @@ services:
       retries: 10
     environment:
       - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=foundher
+      - POSTGRES_PASSWORD=pwd
     ports:
       - '5432:5432'
     volumes:
