--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,10 +5,12 @@ click==8.1.3
 cryptography==39.0.0
 ecdsa==0.18.0
 fastapi==0.88.0
+greenlet==2.0.1
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
 passlib==1.7.4
+psycopg2-binary==2.9.5
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.10.4
@@ -19,6 +21,7 @@ PyYAML==6.0
 rsa==4.9
 six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==1.4.46
 starlette==0.22.0
 typing_extensions==4.4.0
 uvicorn==0.20.0
