--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,24 +4,26 @@ cffi==1.15.1
 click==8.1.3
 cryptography==39.0.2
 ecdsa==0.18.0
-fastapi==0.94.1
-greenlet==2.0.2
+fastapi==0.95.0
 h11==0.14.0
 idna==3.4
-infinity==1.5
-intervals==0.9.2
+mysql-connector-python==8.0.26
+numpy==1.21.2
+pandas==1.3.3
 passlib==1.7.4
+pi==0.1.2
 psycopg2-binary==2.9.5
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.10.6
+python-dateutil==2.8.2
 python-jose==3.3.0
+pytz==2021.3
 rsa==4.9
-six==1.16.0
+six @ file:///AppleInternal/BuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-110/six-1.15.0-py2.py3-none-any.whl
 sniffio==1.3.0
-SQLAlchemy==2.0.6
+SQLAlchemy==2.0.7
 sqlalchemy-json==0.5.0
-SQLAlchemy-Utils==0.40.0
 starlette==0.26.1
 typing_extensions==4.5.0
-uvicorn==0.21.0
+uvicorn==0.21.1
