--- a/founder-client/package.json
+++ b/founder-client/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.3.3",
+    "classnames": "^2.3.2",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
