--- a/founder-client/package.json
+++ b/founder-client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.15",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +16,7 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.3.3",
+    "classnames": "^2.3.2",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
