--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ ecdsa==0.18.0
 fastapi==0.95.0
 h11==0.14.0
 idna==3.4
+joblib==1.2.0
 mysql-connector-python==8.0.26
 numpy==1.21.2
 pandas==1.3.3
@@ -19,11 +20,16 @@ pydantic==1.10.6
 python-dateutil==2.8.2
 python-jose==3.3.0
 pytz==2021.3
+requests==2.28.1
 rsa==4.9
+scikit-learn==1.2.2
+scipy==1.7.3
 six @ file:///AppleInternal/BuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-110/six-1.15.0-py2.py3-none-any.whl
+sklearn==0.0.post1
 sniffio==1.3.0
 SQLAlchemy==2.0.7
 sqlalchemy-json==0.5.0
 starlette==0.26.1
+threadpoolctl==3.1.0
 typing_extensions==4.5.0
 uvicorn==0.21.1
