--- a/founder-client/package.json
+++ b/founder-client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/lab": "^5.0.0-alpha.126",
     "@mui/material": "^5.11.15",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -18,9 +19,12 @@
     "axios": "^1.3.3",
     "classnames": "^2.3.2",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "i": "^0.3.7",
+    "npm": "^9.6.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-mui-fileuploader": "^0.5.2",
     "react-redux": "^8.0.5",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.6.1",
