--- a/founder-client/package.json
+++ b/founder-client/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/lab": "^5.0.0-alpha.126",
-    "@mui/material": "^5.12.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/lab": "^5.0.0-alpha.127",
+    "@mui/material": "^5.11.15",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,8 +23,8 @@
     "classnames": "^2.3.2",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "i": "^0.3.7",
-    "npm": "^9.6.4",
     "mui": "^0.0.1",
+    "npm": "^9.6.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
