--- a/founder-client/package.json
+++ b/founder-client/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "5.0.1",
     "react-token-auth": "^2.3.8",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
